src/rgw/rgw_op.h
@@ -125,6 +125,7 @@ protected:
   map<string, bufferlist> attrs;
   bool get_data;
   bool partial_content;
+  bool ignore_invalid_range;
   bool range_parsed;
   bool skip_manifest;
   rgw_obj obj;
@@ -160,9 +161,11 @@ public:
   void set_get_data(bool get_data) {
     this->get_data = get_data;
   }
+<<<<<<< HEAD
   int verify_permission();
   void pre_exec();
   void execute();
+  int parse_range();
   int read_user_manifest_part(rgw_bucket& bucket,
                               const RGWObjEnt& ent,
                               RGWAccessControlPolicy *bucket_policy,
